<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/button_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="5"
    app:selectionRequired="true"
    app:singleSelection="true">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/year5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/years5"
        android:textSize="13sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/year1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:text="@string/years1"
        android:textSize="13sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:text="@string/month1"
        android:textSize="13sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/week2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:text="@string/weeks2"
        android:textSize="13sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/week1"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/weeks1"
        android:textSize="13sp" />


</com.google.android.material.button.MaterialButtonToggleGroup>